nivasa-macros/tests/trybuild/module_doc_guard_invalid.stderr
error: invalid module guard marker
 --> tests/trybuild/module_doc_guard_invalid.rs:3:1
  |
3 | /// __NIVASA_GUARD__ , ,
  | ^^^^^^^^^^^^^^^^^^^^^^^^
