nivasa-macros/tests/trybuild/module_doc_guard_invalid.rs
use nivasa_macros::module;

/// __NIVASA_GUARD__ , ,
#[module({})]
struct AppModule;

fn main() {}
